# napari-select-volume

./: .gitignore  LICENSE  README.md  pyproject.toml
src/napari_select_volume/: __init__.py  _reader.py  _shapes_utils.py  _transform.py  _widget.py  _writer.py  napari.yaml
